# tbc-tools

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  DEV_NOTES.md  INSTALL.md  README.md  flake.nix  prompt_readme.md  session_readme.md  vcpkg.json
.github/workflows/: build_linux_tools.yml  build_macos_tools.yml  build_windows_tools.yml  release.yml  tests.yml
cmake_modules/: LdDecodeTests.cmake
docs-tech/: BUILD.md  INSTALL.md
docs/EFM-Tools/: .pages  efm-decoder-audio.md  efm-decoder-d24.md  efm-decoder-data.md  efm-decoder-f2.md  efm-decoder.md  efm-stacker-f2.md  vfs-verifier.md
docs/How-to-guides/: .pages
docs/Tools/: .pages
prototypes/ld-process-ac3/decode/: CMakeLists.txt
prototypes/ld-process-efm/: CMakeLists.txt
scripts/: test-chroma  test-decode  test-decode-pretbc  test-ldf-reader  test-write-test-ldf
src/efm-decoder/: CMakeLists.txt
src/efm-decoder/libs/efm/: CMakeLists.txt
src/efm-decoder/libs/efm/src/: reedsolomon.cpp  rspc.cpp
src/efm-decoder/tools/efm-decoder-audio/: CMakeLists.txt
src/efm-decoder/tools/efm-decoder-audio/src/: main.cpp
src/efm-decoder/tools/efm-decoder-d24/: CMakeLists.txt
src/efm-decoder/tools/efm-decoder-d24/src/: main.cpp
src/efm-decoder/tools/efm-decoder-data/: CMakeLists.txt
src/efm-decoder/tools/efm-decoder-data/src/: main.cpp
src/efm-decoder/tools/efm-decoder-f2/: CMakeLists.txt
src/efm-decoder/tools/efm-decoder-f2/src/: main.cpp
src/efm-decoder/tools/efm-stacker-f2/: CMakeLists.txt
src/efm-decoder/tools/efm-stacker-f2/src/: main.cpp
src/efm-decoder/tools/vfs-verifier/: CMakeLists.txt
src/efm-decoder/tools/vfs-verifier/src/: main.cpp
src/ld-analyse/: main.cpp
src/ld-chroma-decoder/: main.cpp
src/ld-chroma-decoder/encoder/: main.cpp
src/ld-disc-stacker/: main.cpp
src/ld-discmap/: main.cpp
src/ld-dropout-correct/: main.cpp
src/ld-export-decode-metadata/: exportmetadata.cpp  main.cpp
src/ld-export-metadata/: main.cpp
src/ld-json-converter/: lddecodemetadata.cpp  main.cpp
src/ld-ldf-reader/: main.cpp
src/ld-lds-converter/: main.cpp
src/ld-process-vbi/: main.cpp
src/ld-process-vits/: main.cpp
test-data/ntsc/: issue176.efm  issue176.pcm  issue176.tbc.db  ve-snw-cut.efm  ve-snw-cut.pcm  ve-snw-cut.tbc.db
test-data/pal/: ggv-mb-1khz.efm  ggv-mb-1khz.pcm  ggv-mb-1khz.tbc.db  jason-testpattern.efm  jason-testpattern.pcm  jason-testpattern.tbc.db  kagemusha-leadout-cbar.efm  kagemusha-leadout-cbar.pcm  kagemusha-leadout-cbar.tbc.db
